--- a/src/index.scss
+++ b/src/index.scss
@@ -6,218 +6,239 @@
 /**
  * Reset some basic elements
  */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+hr,
+dl,
+dd,
+ol,
+ul,
+figure {
+  margin: 0;
+  padding: 0;
 }
-
-
 
 /**
  * Basic styling
  */
 html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-    color: $text-color;
-    background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-feature-settings: "kern" 1;
-    -moz-font-feature-settings: "kern" 1;
-    -o-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern" 1;
-    font-kerning: normal;
-    position: relative;
-    overflow: hidden;
-    min-height: 100%;
-    height: auto;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height}
+    $base-font-family;
+  color: $text-color;
+  background-color: $background-color;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-feature-settings: 'kern' 1;
+  -moz-font-feature-settings: 'kern' 1;
+  -o-font-feature-settings: 'kern' 1;
+  font-feature-settings: 'kern' 1;
+  font-kerning: normal;
+  position: relative;
+  overflow: hidden;
+  min-height: 100%;
+  height: auto;
 
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .site {
-    overflow: hidden;
-    min-height: 100%;
+  overflow: hidden;
+  min-height: 100%;
 }
-
-
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+ul,
+ol,
+dl,
+figure,
 %vertical-rhythm {
-    margin-bottom: math.div($spacing-unit, 2);
+  margin-bottom: math.div($spacing-unit, 2);
 }
 
 // h6 intentionally left out
-h1, h2, h3, h4, h5,
+h1,
+h2,
+h3,
+h4,
+h5,
 %header {
-    font-family: $header-font-family;
-    line-height: $header-line-height;
+  font-family: $header-font-family;
+  line-height: $header-line-height;
 }
 
-h1, .h1 {
-    font-size: 110px;
+h1,
+.h1 {
+  font-size: 110px;
 }
 
-h2, .h2 {
-    font-size: 68px;
+h2,
+.h2 {
+  font-size: 68px;
 }
 
-h3, .h3 {
-    font-size: 48px;
+h3,
+.h3 {
+  font-size: 48px;
 }
 
-h4, .h4, h5, .h5 {
-    font-size: 26px;
+h4,
+.h4,
+h5,
+.h5 {
+  font-size: 26px;
 }
 
-h5, .h5 {
-    text-transform: uppercase;
-    letter-spacing: 1px;
+h5,
+.h5 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
-h6, .h6 {
-    font-size: $small-font-size;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+h6,
+.h6 {
+  font-size: $small-font-size;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .small,
 small {
-    font-size: $small-font-size;
+  font-size: $small-font-size;
 }
-
 
 /**
  * Images
  */
 img {
-    max-width: 100%;
-    vertical-align: middle;
+  max-width: 100%;
+  vertical-align: middle;
 }
-
-
 
 /**
  * Figures
  */
 figure > img {
-    display: block;
+  display: block;
 }
 
 figcaption {
-    font-size: $small-font-size;
+  font-size: $small-font-size;
 }
-
-
 
 /**
  * Lists
  */
-ul, ol {
-    margin-left: $spacing-unit;
+ul,
+ol {
+  margin-left: $spacing-unit;
 }
 
 li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
+  > ul,
+  > ol {
+    margin-bottom: 0;
+  }
 }
-
-
 
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: $base-font-weight;
 }
-
-
 
 /**
  * Links
  */
 a {
-    color: $brand-color;
-    text-decoration: none;
+  color: $brand-color;
+  text-decoration: none;
 
-    &:visited {
-        color: adjust-color($brand-color, $lightness: 15%);
-    }
+  &:visited {
+    color: adjust-color($brand-color, $lightness: 15%);
+  }
 
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
+  &:hover {
+    color: $text-color;
+    text-decoration: underline;
+  }
 }
-
-
 
 /**
  * Blockquotes
  */
 blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: math.div($spacing-unit, 2);
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+  color: $grey-color;
+  border-left: 4px solid $grey-color-light;
+  padding-left: math.div($spacing-unit, 2);
+  font-size: 18px;
+  letter-spacing: -1px;
+  font-style: italic;
 
-    > :last-child {
-        margin-bottom: 0;
-    }
+  > :last-child {
+    margin-bottom: 0;
+  }
 }
-
-
 
 /**
  * Code formatting
  */
 pre,
 code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+  font-size: 15px;
+  border: 1px solid $grey-color-light;
+  border-radius: 3px;
+  background-color: #eef;
 }
 
 code {
-    padding: 1px 5px;
+  padding: 1px 5px;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: auto;
+  padding: 8px 12px;
+  overflow-x: auto;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
-
-
-
-
 
 /**
  * Icons
@@ -226,26 +247,24 @@ $icon-size: 36px;
 $icon-fill-color: adjust-color($grey-color-dark, $lightness: 10%);
 $icon-fill-color-hover: adjust-color($grey-color, $lightness: 10%);
 .icon {
+  > svg {
+    display: inline-block;
+    width: $icon-size;
+    height: $icon-size;
+    vertical-align: middle;
 
-    > svg {
-        display: inline-block;
-        width: $icon-size;
-        height: $icon-size;
-        vertical-align: middle;
-
-        path {
-            fill: $icon-fill-color;
-        }
+    path {
+      fill: $icon-fill-color;
     }
+  }
 
-    &:hover {
-        > svg path {
-            fill: $icon-fill-color-hover;
-        }
+  &:hover {
+    > svg path {
+      fill: $icon-fill-color-hover;
     }
+  }
 }
 
 .callout {
-    margin-top: $spacing-unit;
+  margin-top: $spacing-unit;
 }
-
